--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ BASE_URL = "http://localhost:3000/"
 PORT = 3000
 DB_USERNAME = "root"
 DB_PASSWORD  = "" 
-DB_DATABASE = "latihan"
+DB_DATABASE = "latihan2"
 DB_DIALECT = "mysql"
 DB_HOST = "localhost"
 NODE_ENV = "development"
